Pricing page rework: Fix pricing page from shifting to the right when lightbox is displayed. (#68190)

--- a/client/my-sites/plans/jetpack-plans/product-lightbox/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-lightbox/style.scss
@@ -445,3 +445,7 @@
 	margin-block-start: 1rem;
 	margin-block-end: 0;
 }
+
+.ReactModal__Html--open.lightbox-mode .layout__content {
+	overflow-y: scroll;
+}
